--- a/debian/control
+++ b/debian/control
@@ -1,13 +1,13 @@
-Source: ros-fuerte-ros-comm
+Source: ros-groovy-ros-comm
 Section: misc
 Priority: extra
 Maintainer: Dirk Thomas <dthomas@willowgarage.com>
-Build-Depends: debhelper (>= 7.0.50~), python-yaml,ros-fuerte-ros,ros-fuerte-genmsg,ros-fuerte-langs-dev,ros-fuerte-std-msgs,ros-fuerte-roscpp-core,libboost1.40-all-dev,libapr1-dev,ros-fuerte-catkin,libaprutil1-dev,python-paramiko,liblog4cxx10-dev
+Build-Depends: debhelper (>= 7.0.50~), python-yaml,ros-groovy-catkin,ros-groovy-genmsg,libboost-all-dev,ros-groovy-ros,libapr1-dev,ros-groovy-std-msgs,ros-groovy-langs-dev,liblog4cxx10-dev,libaprutil1-dev,python-paramiko,ros-groovy-roscpp-core
 Homepage: http://www.ros.org/wiki/ros_comm
 Standards-Version: 3.9.2
 
-Package: ros-fuerte-ros-comm
+Package: ros-groovy-ros-comm
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, python-yaml,ros-fuerte-ros,ros-fuerte-std-msgs,ros-fuerte-roscpp-core,libboost1.40-all-dev,libapr1-dev,ros-fuerte-langs,libaprutil1-dev,python-paramiko,liblog4cxx10-dev
+Depends: ${shlibs:Depends}, ${misc:Depends}, python-yaml,libboost-all-dev,ros-groovy-ros,ros-groovy-langs,libapr1-dev,ros-groovy-std-msgs,ros-groovy-roscpp-core,libaprutil1-dev,python-paramiko,liblog4cxx10-dev
 Description: ROS communications-related packages, including core client libraries (roscpp, rospy, roslisp) and graph introspection tools (rostopic, rosnode, rosservice, rosparam).
 
