--- a/clients/cpp/roscpp/CMakeLists.txt
+++ b/clients/cpp/roscpp/CMakeLists.txt
@@ -1,8 +1,6 @@
-# cmake_minimum_required(VERSION 2.4.6)
-
 project(roscpp)
 
-find_package(ROS COMPONENTS
+find_package(ROS REQUIRED COMPONENTS
   catkin genmsg
   cpp_common rostime rosconsole roscpp_serialization
   roscpp_traits std_msgs rosgraph_msgs xmlrpcpp rosunit
@@ -10,7 +8,7 @@ find_package(ROS COMPONENTS
   )
 include_directories(${ROS_INCLUDE_DIRS})
 
-find_package(Boost COMPONENTS signals filesystem system)
+find_package(Boost REQUIRED COMPONENTS signals filesystem system)
 
 include_directories(include)
 
